--- a/.github/workflows/__submit-sarif-failure.yml
+++ b/.github/workflows/__submit-sarif-failure.yml
@@ -28,7 +28,7 @@ jobs:
         - os: ubuntu-latest
           version: latest
         - os: ubuntu-latest
-          version: cached
+          version: default
         - os: ubuntu-latest
           version: nightly-latest
     name: Submit SARIF after failure
