--- a/.github/workflows/__javascript-source-root.yml
+++ b/.github/workflows/__javascript-source-root.yml
@@ -28,7 +28,7 @@ jobs:
         - os: ubuntu-latest
           version: latest
         - os: ubuntu-latest
-          version: cached
+          version: default
         - os: ubuntu-latest
           version: nightly-latest
     name: Custom source root
