--- a/pr-checks/checks/ruby.yml
+++ b/pr-checks/checks/ruby.yml
@@ -1,6 +1,6 @@
 name: "Ruby analysis"
 description: "Tests creation of a Ruby database"
-versions: ["latest", "cached", "nightly-latest"]
+versions: ["latest", "default", "nightly-latest"]
 operatingSystems: ["ubuntu", "macos"]
 steps:
   - uses: ./../action/init
