--- a/.github/workflows/test-codeql-bundle-all.yml
+++ b/.github/workflows/test-codeql-bundle-all.yml
@@ -38,7 +38,7 @@ jobs:
       uses: ./.github/actions/prepare-test
       with:
         version: ${{ matrix.version }}
-        require-codeql-bundle-all: true
+        use-all-platform-bundle: true
     - id: init
       uses: ./../action/init
       with:
