--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
 
     // transpiled JavaScript
     "lib": true,
-  }
+  },
+  // Installing a new Node package often triggers VS Code's git limit warnings as there is typically
+  // an intermediate stage where many files are modified. This setting suppresses these warnings.
+  "git.ignoreLimitWarning": true
 }
