Improve usability of update dependencies workflow

--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -34,4 +34,8 @@ jobs:
           git add node_modules
           git commit -am "Update checked-in dependencies"
           git push origin "HEAD:$BRANCH"
+          echo "Pushed a commit to update the checked-in dependencies." \
+            "Please mark the PR as ready for review to trigger PR checks." |
+            gh pr comment --body-file - --repo github/codeql-action --pr "${{ github.event.pull_request.number }}"
+          gh pr ready --undo --repo github/codeql-action --pr "${{ github.event.pull_request.number }}"
         fi
