--- a/.github/workflows/debug-artifacts.yml
+++ b/.github/workflows/debug-artifacts.yml
@@ -79,7 +79,7 @@ jobs:
           LANGUAGES="cpp csharp go java javascript python"
           for version in $VERSIONS; do
             for os in ubuntu-latest macos-latest; do
-              pushd "./my-debug-artifacts-$os-$version"
+              pushd "./my-debug-artifacts-$os-${version//./}"
               echo "Artifacts from version $version on $os:"
               for language in $LANGUAGES; do
                 echo "- Checking $language"
