--- a/.github/workflows/__go-tracing-legacy-workflow.yml
+++ b/.github/workflows/__go-tracing-legacy-workflow.yml
@@ -82,7 +82,7 @@ jobs:
       run: echo "CODEQL_ENABLE_EXPERIMENTAL_FEATURES_SWIFT=true" >> $GITHUB_ENV
     - uses: actions/setup-go@v4
       with:
-        go-version: 1.21.1
+        go-version: ~1.21.1
     - uses: ./../action/init
       with:
         languages: go
