--- a/pr-checks/checks/go-tracing-custom-build-steps.yml
+++ b/pr-checks/checks/go-tracing-custom-build-steps.yml
@@ -4,7 +4,7 @@ operatingSystems: ["ubuntu", "macos"]
 steps:
   - uses: actions/setup-go@v4
     with:
-      go-version: "1.21.1"
+      go-version: "~1.21.1"
   - uses: ./../action/init
     with:
       languages: go
