--- a/pr-checks/checks/go-tracing-legacy-workflow.yml
+++ b/pr-checks/checks/go-tracing-legacy-workflow.yml
@@ -6,7 +6,7 @@ env:
 steps:
   - uses: actions/setup-go@v4
     with:
-      go-version: "1.21.1"
+      go-version: "~1.21.1"
   - uses: ./../action/init
     with:
       languages: go
