Only run `ref` and `sha` input checks against a single CLI version
These checks aren't affected by the CLI version, so just run them with
the default CLI.

--- a/pr-checks/checks/upload-ref-sha-input.yml
+++ b/pr-checks/checks/upload-ref-sha-input.yml
@@ -1,5 +1,6 @@
 name: "Upload-sarif: 'ref' and 'sha' from inputs"
 description: "Checks that specifying 'ref' and 'sha' as inputs works"
+versions: ["default"]
 steps:
   - uses: ./../action/init
     with:
