--- a/pr-checks/checks/cpp-deptrace-disabled.yml
+++ b/pr-checks/checks/cpp-deptrace-disabled.yml
@@ -1,7 +1,7 @@
-name: "Cpp: disabling autoinstalling dependencies"
+name: "C/C++: disabling autoinstalling dependencies (Linux)"
 description: "Checks that running C/C++ autobuild with autoinstalling dependencies explicitly disabled works"
 operatingSystems: ["ubuntu"]
-versions: ["latest", "default", "nightly-latest"] # This feature is not compatible with old CLIs
+versions: ["latest", "default", "nightly-latest"] # This feature is not compatible with CLIs < 2.15.0
 env:
   DOTNET_GENERATE_ASPNET_CERTIFICATE: "false"
 steps:
@@ -21,6 +21,6 @@ steps:
   - shell: bash
     run: |
       if ls /usr/bin/errno; then
-        echo "Did autoinstall errno, and it should not have"
+        echo "C/C++ autobuild installed errno, but it should not have since auto-install dependencies is disabled."
         exit 1
       fi
