--- a/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
+++ b/pr-checks/checks/cpp-deptrace-enabled-on-macos.yml
@@ -1,5 +1,5 @@
-name: "Cpp: disabling autoinstalling dependencies"
-description: "Checks that running C/C++ autobuild with autoinstalling dependencies explicitly disabled works"
+name: "C/C++: autoinstalling dependencies is skipped (macOS)"
+description: "Checks that running C/C++ autobuild with autoinstalling dependencies explicitly enabled is a no-op on macOS"
 operatingSystems: ["macos"]
 versions: ["nightly-latest"]  # This is not released yet, will come with 2.15.2
 env:
