--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Remove label
         env:
