--- a/.github/workflows/__resolve-environment-action.yml
+++ b/.github/workflows/__resolve-environment-action.yml
@@ -58,7 +58,18 @@ jobs:
     steps:
     - name: Setup Python on MacOS
       uses: actions/setup-python@v2
-      if: matrix.os == 'macos-latest'
+      if: >-
+        matrix.os == 'macos-latest' && (
+
+        matrix.version == 'stable-20220908' ||
+
+        matrix.version == 'stable-20221211' ||
+
+        matrix.version == 'stable-20230418' ||
+
+        matrix.version == 'stable-v2.13.5' ||
+
+        matrix.version == 'stable-v2.14.6')
       with:
         python-version: '3.11'
     - name: Check out repository
